RESOLVED FIXED268258
webrtc::SctpTransportInformation::state_ is not initialized in default constructor
https://bugs.webkit.org/show_bug.cgi?id=268258
Summary webrtc::SctpTransportInformation::state_ is not initialized in default constr...
David Kilzer (:ddkilzer)
Reported 2024-01-28 10:21:39 PST
webrtc::SctpTransportInformation::state_ is not initialized in default constructor. Found by clang static analyzer. Regressed in: Add missing file from https://trac.webkit.org/changeset/252472 https://bugs.webkit.org/show_bug.cgi?id=203897 https://commits.webkit.org/217513@main Which was a follow-up fix for: Update libwebrtc to M78 https://bugs.webkit.org/show_bug.cgi?id=203897 https://commits.webkit.org/217512@main
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-28 10:21:51 PST
David Kilzer (:ddkilzer)
Comment 2 2024-01-28 10:25:34 PST
David Kilzer (:ddkilzer)
Comment 3 2024-01-28 10:28:41 PST
Filed upstream: webrtc::SctpTransportInformation::state_ is not initialized in default constructor <https://bugs.chromium.org/p/webrtc/issues/detail?id=15814>
EWS
Comment 4 2024-01-30 05:10:38 PST
Committed 273738@main (5201724511e7): <https://commits.webkit.org/273738@main> Reviewed commits have been landed. Closing PR #23388 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.