webrtc::SctpTransportInformation::state_ is not initialized in default constructor https://bugs.webkit.org/show_bug.cgi?id=268258 <rdar://121811341>

Reviewed by Youenn Fablet.

* Source/ThirdParty/libwebrtc/Source/webrtc/api/sctp_transport_interface.h:
(webrtc::SctpTransportInformation):
- Initialize state_ to SctpTransportState::kNew.

Canonical link: https://commits.webkit.org/273738@main